# patent-database

db/chroma_db/: chroma.sqlite3
old/interviewprep/: .gitignore  main.py
old/other stuff/: chatbot.py  function_calling.py
patent/: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
patent/backup/: journalist_functions_backup.py
patent/src/core/: __init__.py  chatbot.py  journalist_functions.py  patent_engine.py  prompts.py
patent/src/data_pipeline/: __init__.py  chunk_patents.py  generate_chunk_embeddings.py  import_chunked_embeddings.py
patent/src/utils/: __init__.py  function_cache.py  rate_limiter.py  token_tracker.py
